--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def room_version = "2.2.5"
 
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
