--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def room_version = "2.2.5"
 
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
