--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:screenOrientation="portrait"
-            android:name=".AddUpdateEventActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".MainActivity"
+            android:name=".view.AddUpdateEventActivity"
+            android:parentActivityName=".view.MainActivity"/>
+        <activity android:name=".view.MainActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTop">
             <intent-filter>
