set up NotificationHelper, ReminderBroadcast, and encompassing code in MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="eu.marcellofabbri.dailyroadmap">
 
     <application
-        android:name=".view.TheApplication"
         android:allowBackup="true"
         android:icon="@mipmap/subwayblue"
         android:label="@string/app_name"
@@ -23,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".view.ReminderBroadcast" />
+        <receiver
+            android:name="eu.marcellofabbri.dailyroadmap.view.ReminderBroadcast"
+            android:enabled="true" />
     </application>
 </manifest>
