--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,34 @@
         android:roundIcon="@mipmap/subwayblue_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".view.appWidgets.MyAppWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_one_info" />
+        </receiver>
+
         <activity
-            android:screenOrientation="portrait"
-            android:name=".view.AddUpdateEventActivity"
-            android:parentActivityName=".view.MainActivity"/>
-        <activity android:name=".view.MainActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
+            android:name=".view.activities.AddUpdateEventActivity"
+            android:parentActivityName=".view.activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.activities.MainActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
-            android:name="eu.marcellofabbri.dailyroadmap.view.ReminderBroadcast"
+            android:name=".view.notificationHandlers.ReminderBroadcast"
             android:enabled="true" />
     </application>
+
 </manifest>
